# agentic-docops-platform

./: .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 0e7e207b39f1_add_audit_events.py  7f7dd438ee76_add_job_source_text_signals_and_artifacts.py  f037b88eda12_create_jobs.py
app/: main.py
app/api/: routes_health.py  routes_jobs.py  schemas_artifacts.py  schemas_events.py  schemas_jobs.py
app/core/: audit.py  config.py
app/db/: models.py  session.py
app/domain/: job_service.py  state_machine.py
app/extraction/: engine.py  schemas.py
app/runtime/: default_policy.py  dsl.py  executor.py  planner.py  policy.py  runner.py  store.py  verification_rules.py
app/tools/: base.py  contracts.py  extraction_adapter.py  init_tools.py  registry.py  stubs.py
app/ui/: routes_ui.py
app/ui/templates/: base.html  index.html  job.html  job_detail.html
